--- a/DevOps_Jenkins_MVC/DevOps_Jenkins_MVC.csproj
+++ b/DevOps_Jenkins_MVC/DevOps_Jenkins_MVC.csproj
@@ -30,6 +30,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
     <PackageAsSingleFile>true</PackageAsSingleFile>
+    <DesktopBuildPackageLocation>..\..\Ram\DevOps_Jenkins_MVC.zip</DesktopBuildPackageLocation>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
